--- a/chatapp_test1/pubspec.yaml
+++ b/chatapp_test1/pubspec.yaml
@@ -31,21 +31,19 @@ environment:
 dependencies:
   cloud_firestore: ^4.1.0
   cupertino_icons: ^1.0.2
-  firebase_auth: ^4.1.3
+  firebase_auth: ^4.1.4
   firebase_core: ^2.3.0
   flutter:
     sdk: flutter
+  provider: ^6.0.4
   shared_preferences: ^2.0.15
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_test:
+    sdk: flutter
+
+  flutter_localizations:
     sdk: flutter
 
 # For information on the generic Dart part of this file, see the
@@ -83,3 +81,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_intl:
+  enabled: true
