--- a/chatapp_test1/pubspec.yaml
+++ b/chatapp_test1/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
     sdk: flutter
   provider: ^6.0.4
   shared_preferences: ^2.0.15
+  simple_animations: ^1.3.3
 
 dev_dependencies:
   flutter_lints: ^2.0.0
